--- a/libs/dal/package.json
+++ b/libs/dal/package.json
@@ -25,9 +25,6 @@
     "@aws-sdk/s3-request-presigner": "^3.382.0",
     "@faker-js/faker": "^6.0.0",
     "@novu/shared": "^0.24.1",
-    "JSONStream": "^1.3.5",
-    "archiver": "^5.0.0",
-    "async": "^3.2.0",
     "aws-sdk": "^2.665.0",
     "bluebird": "^3.7.2",
     "class-transformer": "^0.5.1",
@@ -39,11 +36,8 @@
     "jsonfile": "^6.0.1",
     "mongoose": "^7.5.0",
     "mongoose-delete": "^1.0.1",
-    "ng-intercom": "^8.0.2",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
     "superagent-defaults": "^0.1.14",
-    "supertest": "^5.0.0",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
@@ -56,7 +50,9 @@
     "nodemon": "^3.0.1",
     "ts-node": "~10.9.1",
     "tsconfig-paths": "~4.1.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "rimraf": "^3.0.2",
+    "supertest": "^5.0.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
