--- a/libs/shared-web/package.json
+++ b/libs/shared-web/package.json
@@ -37,8 +37,7 @@
     "axios": "^1.6.0",
     "jwt-decode": "^3.1.2",
     "launchdarkly-react-client-sdk": "^3.0.6",
-    "react-router-dom": "6.2.2",
-    "tslib": "^2.3.1"
+    "react-router-dom": "6.2.2"
   },
   "devDependencies": {
     "@types/node": "^18.11.12",
